2012-07-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.c (geniCodeAdd): fixed bug 3537338
	* src/ds390/gen.c (genMultOneByte): handle long result for pointer offsets
	* src/mcs51/gen.c (genLeftShiftLiteral, genRightShiftLiteral),
	* src/z80/gen.c (genLeftShiftLiteral): added wassert
	* support/regression/tests/bug3537338.c: new, added

2012-07-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c: temporarily disable lospre until I can figure out
	  why it's failing on some hosts.

2012-07-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.sln: sdcdb depends on config
	* all.vcxproj: excluded copy to bin\ from debug build as it seems to mess up
	  the dependencies
	* all.vcxproj.filters: added sdasrab.exe
	* src/sdcc.vcxproj.filters,
	* src/sdcc.vcxproj: removed SDCC.y dependency from lexing
	  added version.h to Header Files
	  added SDCClospre.cc and SDCClospre.hpp
	* config.vcxproj,
	* src/yacc.vcxproj: updated all custom build commands and dependencies
	* src/SDCCast.c (decorateType, '='): fixed lost linenumber in bug 3540054
	* src/SDCCsymt.c (dbuf_printTypeChain): removed 'd'
	* sdas/asrab/rabbitmch.c (machine): removed const to fix prototype conflict
	* src/SDCClospre.cc (lospre): fixed warning
	* src/SDCCutil.h,
	* src/SDCCutil.c (processStrSet): fix warning by using explicit function ptr

2012-07-15 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmain.c, src/SDCCutil.c, src/SDCCutil.h, src/SDCCsystem.c,
	  src/mcs51/main.c, src/ds390/main.c, src/z80/main.c, src/hc08/main.c,
	  src/pic14/main.c, src/pic16/main.c, src/avr/main.c, src/xa51/main.c:
	  properly quoted file names when transferred to preprocessor,
	  assembler and linker
	* support/scripts/repack_release.sh: added -pr to usage

2012-07-12 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCerr.c, src/SDCCerr.h, src/pic16/main.c, src/pic16/main.h,
	  src/pic16/glue.c, src/pic16/device.h, src/SDCCast.c, src/SDCCast.h,
	  doc/sdccman.lyx: properly fixed bug